# ku-helper

./: .gitignore  CLAUDE.md  README.md  infra-plan.md  project_management_plan.md  system_architecture.md
.claude/: settings.json
.claude/agents/: bot-coder.md
.claude/hooks/: alembic-models-reminder.sh  api-docs-skill-reminder.sh  guard-cd.py  roadmap-update-reminder.sh
.github/workflows/: deploy-api-server.yml  deploy-backend-bot-startup.yml  deploy-backend.yml  deploy-bot.yml  deploy-frontend.yml  deploy-openapi-docs.yml  spin-up.yml  teardown.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  ROADMAP.md  alembic.ini  claude.md  docker-compose-dev.yml  docker-compose.test.yml  main.py  openapi.json  pyproject.toml
backend/.claude/: architecture.md  code_style.md  roadmap.md  security.md  testing.md
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline_users.py  0002_add_user_status.py  0003_add_user_role.py  0004_add_notifications.py  0005_add_immediate_send_requests.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: aws_auth.py  config.py  database.py  discord.py  exceptions.py  logging.py  redis.py  security.py
backend/app/domains/admin/: exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/auth/: dependencies.py  exceptions.py  router.py  schemas.py  service.py
backend/app/domains/immediate_send/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/notifications/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/users/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/docs/endpoints/: README.md  callback.md  list_notification_history.md
backend/routes/: lunch.py
backend/scripts/: regenerate_openapi.py
backend/tests/: conftest.py
backend/tests/domains/: conftest.py
backend/tests/domains/admin/: conftest.py  test_router.py
backend/tests/domains/auth/: conftest.py  test_callback.py  test_login.py  test_refresh_logout.py
backend/tests/domains/immediate_send/: test_repository.py  test_router.py  test_service.py
backend/tests/domains/notifications/: conftest.py  test_history_router.py  test_history_service.py  test_router.py  test_service.py
backend/tests/domains/users/: test_auth_guard.py  test_me.py
bot/: .env.example  .gitignore  CLAUDE.md  Dockerfile  ROADMAP.md  pyproject.toml
bot/.claude/: architecture.md  code_style.md  roadmap.md  security.md  testing.md
bot/app/: main.py
bot/app/admin/: alerts.py
bot/app/core/: aws_auth.py  config.py  database.py  discord.py  exceptions.py  redis.py
bot/app/crawlers/lunch/: client.py  exceptions.py
bot/app/crawlers/restaurants/: client.py  exceptions.py
bot/app/crawlers/subway/: client.py  exceptions.py
bot/app/db/: models.py
bot/app/notifications/: history_repository.py  repository.py  sender.py
bot/app/notifications/lunch/: embeds.py  repository.py  worker.py
bot/app/notifications/transit/: embeds.py  repository.py  worker.py
bot/app/scheduler/: context.py  jobs.py
bot/docs/: seoul_subway_realtime_arrival_api.md
bot/scrapers/: cafeteria.py  restaurants.py
bot/tests/: conftest.py
bot/tests/admin/: test_alerts.py
bot/tests/core/: test_discord.py
bot/tests/crawlers/lunch/: test_client.py
bot/tests/crawlers/restaurants/: test_client.py
bot/tests/crawlers/subway/: test_client.py
bot/tests/notifications/: test_sender.py
bot/tests/notifications/lunch/: test_embeds.py  test_scheduled_worker.py  test_worker.py
bot/tests/notifications/transit/: test_embeds.py  test_repository.py  test_worker.py
bot/tests/scheduler/: test_jobs.py
docs/: README.md
docs/architecture/: data-flow.md
docs/decisions/: adr.md
docs/endpoints/: README.md
frontend/: vite.config.js
frontend/src/: App.jsx  (+2 more)
infra/: .gitignore  ec2.tf  github.tf  keypair.tf  outputs.tf  providers.tf  roadmap.md  ssh.sh  variables.tf  vpc.tf
scripts/: bootstrap-secrets-to-parameter-store.sh
(+54 files in other folders)
