[project]
name = "backend"
version = "0.1.0"
description = "ku-helper API server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic-settings>=2.0",
    "pyjwt>=2.10",
    "structlog>=24.0",
    "httpx>=0.27",
    "httpx-oauth>=0.16",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
]
