[project]
name = "bot"
version = "0.1.0"
description = "ku-helper Discord notification bot"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.3",
    "apscheduler>=3.10",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "redis>=5.0",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "time-machine>=2.14",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true
